# Bluff-Body-PINNs

./: .gitignore  pyproject.toml
Channel Cavity/: kwargs.py  main.py  plotting.py  supervised_functions.py
Channel Cavity/conf/: config.yaml
