[project]
name = "rp3-code-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "nvidia-physicsnemo>=1.3.0",
    "nvidia-physicsnemo-sym>=2.3.0",
    "scienceplots>=2.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

# pytorch settings
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# physics nemo sym settings
[tool.uv]
no-build-isolation-package = ["nvidia-physicsnemo-sym"]
